--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+   
+    <div class="container">
+
+        <h1>Totally Trivial Trivia!</h1>
+
+        <div id="quiz" class="main-content">
+
+            <button id="start" class="btn">Start</button>
+
 </body>
 </html>
