--- a/index.html
+++ b/index.html
@@ -16,5 +16,41 @@
 
             <button id="start" class="btn">Start</button>
 
+    <div class="container">
+
+        <h1>Totally Trivial Trivia!</h1>
+
+        <div id="quiz" class="main-content">
+            <button id="start" class="btn">Start</button>        
+            <div id="time"></div>       
+            <div id="question1"></div>
+            <div id="answer1"></div>
+            <div id="question2"></div>
+            <div id="answer2"></div>
+            <div id="question3"></div>
+            <div id="answer3"></div>
+            <div id="question4"></div>
+            <div id="answer4"></div>
+            <div id="question5"></div>
+            <div id="answer5"></div>
+            <div id="question6"></div>
+            <div id="answer6"></div>
+            <div id="question7"></div>
+            <div id="answer7"></div>
+            <div id="submit"></div>
+
+            <!-- Results -->
+            <div id="resultsMessage"></div>
+            <div id="correct"></div>
+            <div id="incorrect"></div>
+            <div id="unanswered"></div>
+
+        </div>
+
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
+
 </body>
 </html>
